2007-03-29  Stepan Kasal  <kasal@ucw.cz>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_LIBOBJS_or_ALLOCA): Fix the error message.
	* tests/pr401.test: Update to expose the error.
	* tests/pr401b.test: Likewise.
	* tests/pr401c.test: Likewise.

2007-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (scan_autoconf_config_files): Warn about leading
	`./' in config file names.
	* tests/canon-name.test: New test.
	* tests/Makefile.am: Update.
	* THANKS: Update.
	Suggestion by Claudio Fontana.

	* tests/yacc6.test: Add the generated headers to `BUILT_SOURCES'
	as documented in the manual.  Fixes parallel make failure.
	Report by Dieter Jurzitza.
	* THANKS: Update.

	* ChangeLog, TODO, tests/exdir3.test: Fix copyright notice.

	* TODO: Kill a couple of outdated items.
	* tests/exdir3.test: New test.
	* tests/Makefile.am: Update.

2007-01-27 Bruno Haible  <bruno@clisp.org>

	* doc/automake.texi (Multiple Outputs): Fix the multiple outputs
	with locking example.

2007-01-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Subpackages): Fix ambiguous wording.
	Report and suggestions by Reuben Thomas.
	* THANKS: Update.

2006-12-20  Reuben Thomas  <rrt@sc3d.org>  (tiny change)

	* doc/automake.texi: Fix typo.

2006-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/Makefile.am: Use $(MAKE) $(AM_MAKEFLAGS) for building
	amhello, to prevent gmake from invoking make with MAKEFLAGS
	it does not understand.
	Report by Patrick Welche.

2006-10-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Dist, Dependency Tracking Evolution):
	Fix some typos.
	* lib/Automake/Condition.pm: Likewise.
	* lib/Automake/DisjConditions.pm: Likewise.
	* lib/Automake/ItemDef.pm: Likewise.
	* lib/Automake/Options.pm: Likewise.
	* lib/Automake/Rule.pm: Likewise.
	* lib/Automake/VarDef.pm: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/Wrap.pm: Likewise.
	* lib/Automake/XFile.pm: Likewise.