@@ -1,4 +1,10 @@
 New in 1.10.0a:
+
+Bugs fixed in 1.10.0a:
+
+* Long standing bugs:
+
+  - Fix aix dependency tracking for libtool objects.
 
 New in 1.10:
 
@@ -1234,7 +1240,7 @@ New in 0.20:
 -----
 
 Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
-2004, 2005  Free Software Foundation, Inc.
+2004, 2005, 2006, 2007  Free Software Foundation, Inc.
 
 This file is part of GNU Automake.
 
