@@ -1,3 +1,13 @@
+2007-03-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/depcomp (aix): Rewrite depmode in the spirit of the tru64
+	one.  Fixes failure to catch dependencies with libtool and xlc
+	in case of enable_static=no (which is the default on AIX without
+	runtimelinking).
+	* tests/depcomp7.test: Run test once with --disable-shared and
+	once with --disable-static, to expose failure systematically.
+	* NEWS: Update.
+
 2007-03-29  Stepan Kasal  <kasal@ucw.cz>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
